# simplechallenges

./: .gitignore  README.md
adventofcode/day1/: README.md
adventofcode/day1/c++/: solution.cpp
adventofcode/day1/python/: solution.py
challenges/: CMakeLists.txt
challenges/codewars/: CMakeLists.txt
challenges/codewars/gradebook/: GrassHopper.java  description.txt  solution.cpp  solution.go  solution.h  solution.py  solution.rb  test.cpp
challenges/codewars/population/: description.txt  solution.cpp  solution.go  solution.h  solution.py  test.cpp
challenges/interview1/: AnalogClock.cpp  AnalogClock.h  AnalogClockTest.cpp  CMakeLists.txt  description.txt  main.cpp
challenges/math1/: CMakeLists.txt  description.txt  math1_tests.cpp  solution.h  solution1.cpp  solution2.cpp  solution3.cpp
challenges/math2/: CmakeLists.txt  math2_tests.cpp  solution.h  solution1.cpp
games/game_of_life/: description.txt  game_of_life.py  golbutton.py  grid_oo.py
games/number_guess/: description.txt  number_guess.py
games/number_guess_ai/: description.txt  number_guess_ai_loop.py  number_guess_ai_recursive.py
games/vocab_test/: description.txt  questions.txt  vocab_test.py
guides/: lists.py  strings.py
warmup/near_hundred/: description.txt  near_hundred.py
warmup/sleep_in/: description.txt  sleep_in.py
warmup/sum_double/: description.txt  sum_double.py
